--- a/index.html
+++ b/index.html
@@ -62,14 +62,13 @@
         <div class="perfil">
             <ul class="navbar-nav">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="./assets/img/logo-perfil-defecto.png" alt="img perfil">
-                    Gerardo Manuel
+                    Leonardo Castillo
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="#">Ajustes</a></li>
+                    <li><a class="dropdown-item" href="#">Cerrar Sesion</a></li>
                 </ul>
             </li>
             </ul>
