--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Perfil
+                            Caja
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Apertura de caja</a></li>
+                            <li><a class="dropdown-item" href="#">Cierre de caja</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -63,7 +62,7 @@
             <ul class="navbar-nav">
             <li class="nav-item dropdown">
                 <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="./assets/img/logo-perfil-defecto.png" alt="img perfil">
+                    <img src="./assets/img/logo-perfil.jpg" alt="img perfil">
                     Leonardo Castillo
                 </a>
                 <ul class="dropdown-menu">
