se termino la base del navbar

--- a/index.html
+++ b/index.html
@@ -18,32 +18,15 @@
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown link
+                            Atención Médica
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown link
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown link
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Turnos</a></li>
+                            <li><a class="dropdown-item" href="#">Pacientes</a></li>
+                            <li><a class="dropdown-item" href="#">Costos</a></li>
+                            <li><a class="dropdown-item" href="#">Medicos</a></li>
+                            <li><a class="dropdown-item" href="#">Consultorios</a></li>
+                            <li><a class="dropdown-item" href="#">Especialidades</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -53,6 +36,25 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Apertura de caja</a></li>
                             <li><a class="dropdown-item" href="#">Cierre de caja</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Servicios Externos
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Facturas</a></li>
+                            <li><a class="dropdown-item" href="#">Comprobantes</a></li>
+                            <li><a class="dropdown-item" href="#">Servicios</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Resumen Estadístico
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Turnos</a></li>
+                            <li><a class="dropdown-item" href="#">Cajas</a></li>
                         </ul>
                     </li>
                 </ul>
