se agrego el rol del usuario

--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
             <li class="nav-item dropdown">
                 <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="./assets/img/logo-perfil.jpg" alt="img perfil">
-                    Leonardo Castillo
+                    <div>
+                        <p class="nombre-usuario">
+                            Leonardo Castillo
+                        </p>
+                        <p class="rol">
+                            Recepcionista
+                        </p>
+                    </div>
                 </a>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">Ajustes</a></li>
