se agrego los archivos para el proceso de turnos del alcance

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             Leonardo Castillo
                         </p>
                         <p class="rol">
-                            Recepcionista
+                            Mantenimiento
                         </p>
                     </div>
                 </a>
@@ -83,7 +83,6 @@
         </div>
     </header>
     <main>
-        hola main
     </main>
     <footer>
         <p>&copy Copyright 2023 ELIT</p>
