--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             Leonardo Castillo
                         </p>
                         <p class="rol">
-                            Mantenimiento
+                            Administrativo
                         </p>
                     </div>
                 </a>
