se agregaron archivos de estilo

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Turnos</a></li>
                             <li><a class="dropdown-item" href="#">Pacientes</a></li>
-                            <li><a class="dropdown-item" href="#">Costos</a></li>
                             <li><a class="dropdown-item" href="#">Medicos</a></li>
                             <li><a class="dropdown-item" href="#">Consultorios</a></li>
                             <li><a class="dropdown-item" href="#">Especialidades</a></li>
+                            <li><a class="dropdown-item" href="#">Costos</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -67,10 +67,10 @@
                     <img src="./assets/img/logo-perfil.jpg" alt="img perfil">
                     <div>
                         <p class="nombre-usuario">
-                            Leonardo Castillo
+                            Leandro Castillo
                         </p>
                         <p class="rol">
-                            Mantenimiento
+                            Administrativo
                         </p>
                     </div>
                 </a>
