--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="empresa-logo">
-            <img src="./assets/img/logo-DentCorp.png" alt="Logo DentCorp">
+            <img src="./assets/img/Logo-DentCorp.png" alt="Logo DentCorp">
         </div>
         <div class="MENU">
             <nav class="navbar navbar-expand-lg">
@@ -21,7 +21,7 @@
                             Atención Médica
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Turnos</a></li>
+                            <li><a class="dropdown-item" href="./pages/Atencion Medica/Turnos.html">Turnos</a></li>
                             <li><a class="dropdown-item" href="#">Pacientes</a></li>
                             <li><a class="dropdown-item" href="#">Medicos</a></li>
                             <li><a class="dropdown-item" href="#">Consultorios</a></li>
