--- a/pages/Atencion Medica/Turnos.html
+++ b/pages/Atencion Medica/Turnos.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="../../styles/normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../../styles/style.css">
-    <link rel="stylesheet" href="../../styles/styles-pages/Atencion Medica/Turnos.css">
 </head>
 <body>
     <header>
@@ -223,9 +222,8 @@
             </div>
               <div class="div-botones">
                 <form role="search">
-                    <select name="Buscar Por" id="" name="Opciones">
-                        <label for="opciones">Opciones</label>
-                        <option value="ID">ID</option>
+                    <select id="">
+                        <option default value="ID">ID</option>
                         <option value="Paciente">Paciente</option>
                         <option value="Autorizado">Autorizado</option>
                         <option value="Medico">Medico</option>
