--- a/pages/register.html
+++ b/pages/register.html
@@ -46,8 +46,9 @@
                         </div>
                         <hr class="colorgraph">
                         <div class="row">
+                            <div class="col-xs-6 col-md-6"><a href="#" class="btn btn-success btn-block btn-lg">Volver</a></div>
                             <div class="col-xs-6 col-md-6"><input type="submit" value="Registrarme" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
-                            <div class="col-xs-6 col-md-6"><a href="#" class="btn btn-success btn-block btn-lg">Inicio</a></div>
+                            
                         </div>
                     </div>
                     </form>
