página de registro añadida

--- a/pages/login.html
+++ b/pages/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Login</h1>
-        <form>
+        <form class="formLog">
             <div>
                 <img src="../assets/img/login.png" alt="">
                 <input type="text" placeholder="Nombre de Usuario">
@@ -30,7 +30,7 @@
                 <div><span>¿Olvidó su contraseña?</span></div>
             </div>
             <div class="last-base">
-                <a href="pages\register.html">Registrarse</a>
+                <a href="register.html">Registrarse</a>
             </div>
         </form>
     </div>
