--- a/pages/register.html
+++ b/pages/register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -55,6 +55,40 @@
                 </div>
             </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    </div>
+</body>
+</html> -->
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registro DentCorp</title>
+    <link rel="stylesheet" href="../styles/styles-pages/style-register.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Formulario de registro</h1>
+        <form class="formReg">
+            <div><input type="text" placeholder="Nombres"></div>
+            <div><input type="text" placeholder="Apellidos"></div>
+            <div><input type="text" placeholder="DNI"></div>
+            <div><input type="email" placeholder="Email"></div>
+            <div><input type="password" placeholder="Contraseña"></div>
+            <div><input type="password" placeholder="Confirmar contraseña"></div>
+
+            <div>
+                <a href="login.html">
+                  <input type="button" value="Volver al inicio">
+                </a>
+            </div>              
+            <div>
+                <input type="submit" value="Registrarme">
+            </div>
+        </form>
     </div>
 </body>
 </html>
