quitada la funcionalidad de mantenerse logueado

--- a/pages/login.html
+++ b/pages/login.html
@@ -19,18 +19,21 @@
                 <input type="password" placeholder="Contraseña">
             </div>
             <div>
-                <input type="submit" value="Ingresar">
+                <a href="../index.html">
+                    <input type="button" value="Ingresar">
+                </a>
+                <!-- <input type="submit" value="Ingresar"> -->
             </div>
-            <div class="first-base">
+            <!-- <div class="first-base">
                 <div class="child-base">
                     <input type="checkbox"id="loggedin" hidden>
                     <label for="loggedin"><div class="switch"></div></label>
                     <span>Seguir logueado</span>
                 </div>
                 <div><span>¿Olvidó su contraseña?</span></div>
-            </div>
+            </div> -->
             <div class="last-base">
-                <a href="register.html">Registrarse</a>
+                <a href="register.html">Registrarme</a>
             </div>
         </form>
     </div>
