se mejoraron los estilos de las tablas

--- a/pages/Atencion Medica/Turnos.html
+++ b/pages/Atencion Medica/Turnos.html
@@ -88,7 +88,6 @@
             <div class="div-tabla">
                 <table>
                     <tr class="turnos__fila__titulo">
-                        <td class="turnos__titulo">ID</td>
                         <td class="turnos__titulo">Paciente</td>
                         <td class="turnos__titulo">Fecha</td>
                         <td class="turnos__titulo">Autorizado</td>
@@ -98,7 +97,6 @@
                         <td class="turnos__titulo">Consultorio Asignado</td>
                     </tr>
                     <tr class="turnos__contenido">
-                        <td>1</td>
                         <td>Gaston Camu</td>
                         <td>12/12/2023 15:00 Hs</td>
                         <td>SI</td>
@@ -108,7 +106,6 @@
                         <td>1</td>
                     </tr>
                     <tr class="turnos__contenido">
-                        <td>2</td>
                         <td>Ezequiel Mamani</td>
                         <td>14/12/2023 16:00 Hs</td>
                         <td>NO</td>
@@ -118,7 +115,6 @@
                         <td>2</td>
                     </tr>
                     <tr class="turnos__contenido">
-                        <td>1</td>
                         <td>Gaston Camu</td>
                         <td>12/12/2023 15:00 Hs</td>
                         <td>SI</td>
@@ -128,7 +124,6 @@
                         <td>1</td>
                     </tr>
                     <tr class="turnos__contenido">
-                        <td>2</td>
                         <td>Ezequiel Mamani</td>
                         <td>14/12/2023 16:00 Hs</td>
                         <td>NO</td>
@@ -138,7 +133,6 @@
                         <td>2</td>
                     </tr>
                     <tr class="turnos__contenido">
-                        <td>1</td>
                         <td>Gaston Camu</td>
                         <td>12/12/2023 15:00 Hs</td>
                         <td>SI</td>
@@ -148,7 +142,6 @@
                         <td>1</td>
                     </tr>
                     <tr class="turnos__contenido">
-                        <td>2</td>
                         <td>Ezequiel Mamani</td>
                         <td>14/12/2023 16:00 Hs</td>
                         <td>NO</td>
@@ -158,7 +151,6 @@
                         <td>2</td>
                     </tr>
                     <tr class="turnos__contenido">
-                        <td>1</td>
                         <td>Gaston Camu</td>
                         <td>12/12/2023 15:00 Hs</td>
                         <td>SI</td>
@@ -168,7 +160,6 @@
                         <td>1</td>
                     </tr>
                     <tr class="turnos__contenido">
-                        <td>2</td>
                         <td>Ezequiel Mamani</td>
                         <td>14/12/2023 16:00 Hs</td>
                         <td>NO</td>
@@ -178,7 +169,6 @@
                         <td>2</td>
                     </tr>
                     <tr class="turnos__contenido">
-                        <td>1</td>
                         <td>Gaston Camu</td>
                         <td>12/12/2023 15:00 Hs</td>
                         <td>SI</td>
@@ -188,7 +178,6 @@
                         <td>1</td>
                     </tr>
                     <tr class="turnos__contenido">
-                        <td>2</td>
                         <td>Ezequiel Mamani</td>
                         <td>14/12/2023 16:00 Hs</td>
                         <td>NO</td>
@@ -198,7 +187,6 @@
                         <td>2</td>
                     </tr>
                     <tr class="turnos__contenido">
-                        <td>1</td>
                         <td>Gaston Camu</td>
                         <td>12/12/2023 15:00 Hs</td>
                         <td>SI</td>
@@ -208,7 +196,6 @@
                         <td>1</td>
                     </tr>
                     <tr class="turnos__contenido">
-                        <td>2</td>
                         <td>Ezequiel Mamani</td>
                         <td>14/12/2023 16:00 Hs</td>
                         <td>NO</td>
@@ -217,14 +204,31 @@
                         <td>PAMI</td>
                         <td>2</td>
                     </tr>
-                    
+                    <tr class="turnos__contenido">
+                        <td>Gaston Camu</td>
+                        <td>12/12/2023 15:00 Hs</td>
+                        <td>SI</td>
+                        <td>Arreglo de carie</td>
+                        <td>Alicia Nazar</td>
+                        <td>IPS</td>
+                        <td>1</td>
+                    </tr>
+                    <tr class="turnos__contenido">
+                        <td>Ezequiel Mamani</td>
+                        <td>14/12/2023 16:00 Hs</td>
+                        <td>NO</td>
+                        <td>Arreglo de carie</td>
+                        <td>Karen Cordoba</td>
+                        <td>PAMI</td>
+                        <td>2</td>
+                    </tr>
                   </table>
             </div>
               <div class="div-botones">
                 <form role="search">
                     <select id="">
-                        <option default value="ID">ID</option>
-                        <option value="Paciente">Paciente</option>
+                        <option disabled selected value="Default">Filtrar</option>
+                        <option class="pepe" value="Paciente">Paciente</option>
                         <option value="Autorizado">Autorizado</option>
                         <option value="Medico">Medico</option>
                     </select>
@@ -243,8 +247,7 @@
         <p>&copy Copyright 2023 ELIT</p>
     </footer>
 
-    <h1>pepe</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="../../js/pages/Atencion Medica/Turnos.js"></script>
+    <script src="../../js/index.js"></script>
 </body>
 </html>
