--- a/pages/Atencion Medica/Turnos.html
+++ b/pages/Atencion Medica/Turnos.html
@@ -87,16 +87,16 @@
         <div class="div-principal">
             <div class="div-tabla">
                 <table>
-                    <tr class="turnos__fila__titulo">
-                        <td class="turnos__titulo">Paciente</td>
-                        <td class="turnos__titulo">Fecha</td>
-                        <td class="turnos__titulo">Autorizado</td>
-                        <td class="turnos__titulo">Servicio</td>
-                        <td class="turnos__titulo">Médico</td>
-                        <td class="turnos__titulo">Cobertura</td>
-                        <td class="turnos__titulo">Consultorio Asignado</td>
+                    <tr class="fila__titulo">
+                        <td class="fila__titulo__contenido">Paciente</td>
+                        <td class="fila__titulo__contenido">Fecha</td>
+                        <td class="fila__titulo__contenido">Autorizado</td>
+                        <td class="fila__titulo__contenido">Servicio</td>
+                        <td class="fila__titulo__contenido">Médico</td>
+                        <td class="fila__titulo__contenido">Cobertura</td>
+                        <td class="fila__titulo__contenido">Consultorio Asignado</td>
                     </tr>
-                    <tr class="turnos__contenido">
+                    <tr class="fila__contenido">
                         <td>Gaston Camu</td>
                         <td>12/12/2023 15:00 Hs</td>
                         <td>SI</td>
@@ -105,7 +105,7 @@
                         <td>IPS</td>
                         <td>1</td>
                     </tr>
-                    <tr class="turnos__contenido">
+                    <tr class="fila__contenido">
                         <td>Ezequiel Mamani</td>
                         <td>14/12/2023 16:00 Hs</td>
                         <td>NO</td>
@@ -114,7 +114,7 @@
                         <td>PAMI</td>
                         <td>2</td>
                     </tr>
-                    <tr class="turnos__contenido">
+                    <tr class="fila__contenido">
                         <td>Gaston Camu</td>
                         <td>12/12/2023 15:00 Hs</td>
                         <td>SI</td>
@@ -123,7 +123,7 @@
                         <td>IPS</td>
                         <td>1</td>
                     </tr>
-                    <tr class="turnos__contenido">
+                    <tr class="fila__contenido">
                         <td>Ezequiel Mamani</td>
                         <td>14/12/2023 16:00 Hs</td>
                         <td>NO</td>
@@ -132,7 +132,7 @@
                         <td>PAMI</td>
                         <td>2</td>
                     </tr>
-                    <tr class="turnos__contenido">
+                    <tr class="fila__contenido">
                         <td>Gaston Camu</td>
                         <td>12/12/2023 15:00 Hs</td>
                         <td>SI</td>
@@ -141,79 +141,7 @@
                         <td>IPS</td>
                         <td>1</td>
                     </tr>
-                    <tr class="turnos__contenido">
-                        <td>Ezequiel Mamani</td>
-                        <td>14/12/2023 16:00 Hs</td>
-                        <td>NO</td>
-                        <td>Arreglo de carie</td>
-                        <td>Karen Cordoba</td>
-                        <td>PAMI</td>
-                        <td>2</td>
-                    </tr>
-                    <tr class="turnos__contenido">
-                        <td>Gaston Camu</td>
-                        <td>12/12/2023 15:00 Hs</td>
-                        <td>SI</td>
-                        <td>Arreglo de carie</td>
-                        <td>Alicia Nazar</td>
-                        <td>IPS</td>
-                        <td>1</td>
-                    </tr>
-                    <tr class="turnos__contenido">
-                        <td>Ezequiel Mamani</td>
-                        <td>14/12/2023 16:00 Hs</td>
-                        <td>NO</td>
-                        <td>Arreglo de carie</td>
-                        <td>Karen Cordoba</td>
-                        <td>PAMI</td>
-                        <td>2</td>
-                    </tr>
-                    <tr class="turnos__contenido">
-                        <td>Gaston Camu</td>
-                        <td>12/12/2023 15:00 Hs</td>
-                        <td>SI</td>
-                        <td>Arreglo de carie</td>
-                        <td>Alicia Nazar</td>
-                        <td>IPS</td>
-                        <td>1</td>
-                    </tr>
-                    <tr class="turnos__contenido">
-                        <td>Ezequiel Mamani</td>
-                        <td>14/12/2023 16:00 Hs</td>
-                        <td>NO</td>
-                        <td>Arreglo de carie</td>
-                        <td>Karen Cordoba</td>
-                        <td>PAMI</td>
-                        <td>2</td>
-                    </tr>
-                    <tr class="turnos__contenido">
-                        <td>Gaston Camu</td>
-                        <td>12/12/2023 15:00 Hs</td>
-                        <td>SI</td>
-                        <td>Arreglo de carie</td>
-                        <td>Alicia Nazar</td>
-                        <td>IPS</td>
-                        <td>1</td>
-                    </tr>
-                    <tr class="turnos__contenido">
-                        <td>Ezequiel Mamani</td>
-                        <td>14/12/2023 16:00 Hs</td>
-                        <td>NO</td>
-                        <td>Arreglo de carie</td>
-                        <td>Karen Cordoba</td>
-                        <td>PAMI</td>
-                        <td>2</td>
-                    </tr>
-                    <tr class="turnos__contenido">
-                        <td>Gaston Camu</td>
-                        <td>12/12/2023 15:00 Hs</td>
-                        <td>SI</td>
-                        <td>Arreglo de carie</td>
-                        <td>Alicia Nazar</td>
-                        <td>IPS</td>
-                        <td>1</td>
-                    </tr>
-                    <tr class="turnos__contenido">
+                    <tr class="fila__contenido">
                         <td>Ezequiel Mamani</td>
                         <td>14/12/2023 16:00 Hs</td>
                         <td>NO</td>
@@ -228,7 +156,7 @@
                 <form role="search">
                     <select id="">
                         <option disabled selected value="Default">Filtrar</option>
-                        <option class="pepe" value="Paciente">Paciente</option>
+                        <option value="Paciente">Paciente</option>
                         <option value="Autorizado">Autorizado</option>
                         <option value="Medico">Medico</option>
                     </select>
