se creo las tablas de: consultorios, especialidades, medicos, pacientes, servicios odontologicos, turnos

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="./pages/Atencion Medica/Turnos.html">Turnos</a></li>
-                            <li><a class="dropdown-item" href="#">Pacientes</a></li>
-                            <li><a class="dropdown-item" href="#">Medicos</a></li>
-                            <li><a class="dropdown-item" href="#">Consultorios</a></li>
-                            <li><a class="dropdown-item" href="#">Especialidades</a></li>
-                            <li><a class="dropdown-item" href="#">Costos</a></li>
+                            <li><a class="dropdown-item" href="./pages/Atencion Medica/Pacientes.html">Pacientes</a></li>
+                            <li><a class="dropdown-item" href="./pages/Atencion Medica/Medicos.html">Medicos</a></li>
+                            <li><a class="dropdown-item" href="./pages/Atencion Medica/Consultorios.html">Consultorios</a></li>
+                            <li><a class="dropdown-item" href="./pages/Atencion Medica/Especialidades.html">Especialidades</a></li>
+                            <li><a class="dropdown-item" href="./pages/Atencion Medica/Servicios-Odontologicos.html">Servicios Odontologicos</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
