--- a/pages/Atencion Medica/Turnos.html
+++ b/pages/Atencion Medica/Turnos.html
@@ -21,12 +21,12 @@
                             Atención Médica
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Turnos</a></li>
-                            <li><a class="dropdown-item" href="#">Pacientes</a></li>
-                            <li><a class="dropdown-item" href="#">Medicos</a></li>
-                            <li><a class="dropdown-item" href="#">Consultorios</a></li>
-                            <li><a class="dropdown-item" href="#">Especialidades</a></li>
-                            <li><a class="dropdown-item" href="#">Costos</a></li>
+                            <li><a class="dropdown-item" href="./Turnos.html">Turnos</a></li>
+                            <li><a class="dropdown-item" href="./Pacientes.html">Pacientes</a></li>
+                            <li><a class="dropdown-item" href="./Medicos.html">Medicos</a></li>
+                            <li><a class="dropdown-item" href="./Consultorios.html">Consultorios</a></li>
+                            <li><a class="dropdown-item" href="./Especialidades.html">Especialidades</a></li>
+                            <li><a class="dropdown-item" href="../Atencion Medica/Servicios-Odontologicos.html">Servicios Odontologicos</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -165,7 +165,7 @@
                         <button type="submit"><img src="../../assets/img/lupa.png" alt="B"></button>
                     </div>
                 </form>
-                <button>NUEVO TURNO</button>
+                <button>AGREGAR TURNO</button>
                 <button>MODIFICAR</button>
                 <button>ELIMINAR</button>
               </div>
