--- a/pages/Atencion Medica/Servicios-Odontologicos.html
+++ b/pages/Atencion Medica/Servicios-Odontologicos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consultorios</title>
+    <title>Servicios Odontologicos</title>
     <link rel="stylesheet" href="../../styles/normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../../styles/style.css">
@@ -83,25 +83,65 @@
         </div>
     </header>
     <main>
-        <h2>CONSULTORIOS</h2>
+        <h2>SERVICIOS ODONTOLOGICOS</h2>
         <div class="div-principal">
             <div class="div-tabla">
                 <table>
                     <tr class="fila__titulo">
                         <td class="fila__titulo__contenido">Codigo</td>
-                        <td class="fila__titulo__contenido">Numero de Consultorio</td>
+                        <td class="fila__titulo__contenido">Descripción</td>
+                        <td class="fila__titulo__contenido">Costo</td>
+
                     </tr>
                     <tr class="fila__contenido">
                         <td>001</td>
-                        <td>1</td>
+                        <td>Endodoncia</td>
+                        <td>3000$</td>
                     </tr>
                     <tr class="fila__contenido">
                         <td>002</td>
-                        <td>2</td>
+                        <td>Rehabilitación oral - Prótesis</td>
+                        <td>39000$</td>
                     </tr>
                     <tr class="fila__contenido">
-                        <td>003</td>
-                        <td>3</td>
+                        <td>001</td>
+                        <td>Endodoncia</td>
+                        <td>3000$</td>
+                    </tr>
+                    <tr class="fila__contenido">
+                        <td>002</td>
+                        <td>Rehabilitación oral - Prótesis</td>
+                        <td>39000$</td>
+                    </tr>
+                    <tr class="fila__contenido">
+                        <td>001</td>
+                        <td>Endodoncia</td>
+                        <td>3000$</td>
+                    </tr>
+                    <tr class="fila__contenido">
+                        <td>002</td>
+                        <td>Rehabilitación oral - Prótesis</td>
+                        <td>39000$</td>
+                    </tr>
+                    <tr class="fila__contenido">
+                        <td>001</td>
+                        <td>Endodoncia</td>
+                        <td>3000$</td>
+                    </tr>
+                    <tr class="fila__contenido">
+                        <td>002</td>
+                        <td>Rehabilitación oral - Prótesis</td>
+                        <td>39000$</td>
+                    </tr>
+                    <tr class="fila__contenido">
+                        <td>001</td>
+                        <td>Endodoncia</td>
+                        <td>3000$</td>
+                    </tr>
+                    <tr class="fila__contenido">
+                        <td>002</td>
+                        <td>Rehabilitación oral - Prótesis</td>
+                        <td>39000$</td>
                     </tr>
                   </table>
             </div>
@@ -110,14 +150,14 @@
                     <select id="">
                         <option disabled selected value="Default">Filtrar</option>
                         <option value="Paciente">Codigo</option>
-                        <option value="Autorizado">Numero de Consultorio</option>
+                        <option value="Autorizado">Descripcion</option>
                     </select>
                     <div>
                         <input type="search" placeholder="BUSCAR">
                         <button type="submit"><img src="../../assets/img/lupa.png" alt="B"></button>
                     </div>
                 </form>
-                <button>AGREGAR CONSULTORIO</button>
+                <button>AGREGAR SERVICIO</button>
                 <button>MODIFICAR</button>
                 <button>ELIMINAR</button>
               </div>
