--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="./assets/img/Logo-DentCorp.png" alt="Logo DentCorp">
         </div>
         <div class="MENU">
-            <nav class="navbar">
+            <nav class="navbar navbar-expand-lg">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
