se agrego ajustes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </div>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Ajustes</a></li>
+                    <li><a class="dropdown-item" href="./pages/perfil/ajustes.html">Ajustes</a></li>
                     <li><a class="dropdown-item" href="#">Cerrar Sesion</a></li>
                 </ul>
             </li>
