arreglada la pag ajustes

--- a/pages/perfil/ajustes.html
+++ b/pages/perfil/ajustes.html
@@ -52,14 +52,17 @@
 
             <div class="col-sm-10">
                 <label for="dni" class="col-sm-2 col-form-label">Recordatorios:</label>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="recordatorios" id="si" value="si">
-                    <label class="form-check-label" for="si">Sí</label>
+                <div class="col-sm-4">
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="recordatorios" id="si" value="si">
+                        <label class="form-check-label" for="si">Sí</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="recordatorios" id="no" value="no">
+                        <label class="form-check-label" for="no">No</label>
+                    </div>
                 </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="recordatorios" id="no" value="no">
-                    <label class="form-check-label" for="no">No</label>
-                </div>
+                
             </div>
 
             <button type="submit" class="btn btn-primary">Guardar Cambios</button>
