--- a/pages/Atencion Medica/Turnos.html
+++ b/pages/Atencion Medica/Turnos.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="empresa-logo">
-            <img src="../../assets/img/logo-DentCorp.png" alt="Logo DentCorp">
+            <img src="../assets/img/logo-DentCorp.png" alt="Logo DentCorp">
         </div>
         <div class="MENU">
             <nav class="navbar navbar-expand">
