--- a/pages/Atencion Medica/Consultorios.html
+++ b/pages/Atencion Medica/Consultorios.html
@@ -14,7 +14,7 @@
             <img src="../../assets/img/logo-DentCorp.png" alt="Logo DentCorp">
         </div>
         <div class="MENU">
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
